@startuml

title __CLIENT's Class Diagram__\n

  package algorithm {
    package algorithm.encryption {
      class AESencryption {
      }
    }
  }
  

  package algorithm {
    class Algorithm {
    }
  }
  

  package parameters {
    class Client {
    }
  }
  

  package sample {
    class ClientMain {
    }
  }
  

  package connection {
    class ClientServer {
    }
  }
  

  package Util {
    class Consts {
    }
  }
  

  package sample {
    class Controller {
    }
  }
  

  package algorithm {
    package algorithm.ecc {
      class ECPoint {
      }
    }
  }
  

  package algorithm {
    package algorithm.ecc {
      class EllipticCurve {
      }
    }
  }
  

  package algorithm {
    package algorithm.Steganograpgy {
      class Embedding {
      }
    }
  }
  

  package algorithm {
    package algorithm.encryption {
      class EncUtil {
      }
    }
  }
  

  package algorithm {
    package algorithm.Steganograpgy {
      class Extracting {
      }
    }
  }
  

  package algorithm {
    package algorithm.Steganograpgy {
      class HelperMethods {
      }
    }
  }
  

  package connection {
    class Message {
    }
  }
  

  package parameters {
    class PrivateKey {
    }
  }
  

  package parameters {
    class PublicKey {
    }
  }
  

  package algorithm {
    package algorithm.steganography {
      class Steganography {
      }
    }
  }
  

  package algorithm {
    package algorithm.steganography {
      class UITSteg {
      }
    }
  }
  

  package Util {
    class Uty {
    }
  }
  

  package parameters {
    class publicParameters {
    }
  }
  

  Algorithm o-- ClientServer : bankClient
  Client -up-|> Serializable
  Client o-- ECPoint : pointOfClientPartialKey
  Client o-- ECPoint : pointOfBankPartialKey
  Client o-- PrivateKey : privateKey
  ClientMain -up-|> Application
  ClientServer o-- Client : client
  ClientServer o-- publicParameters : publicParameter
  ClientServer o-- ECPoint : P_C
  Controller -up-|> Initializable
  Controller o-- Client : client
  Controller o-- Algorithm : algorithm
  Controller o-- publicParameters : publicParameter
  ECPoint -up-|> Serializable
  EllipticCurve -up-|> Serializable
  EllipticCurve o-- ECPoint : g
  Message -up-|> Serializable
  PrivateKey -up-|> Serializable
  PublicKey -up-|> Serializable
  PublicKey o-- ECPoint : xCoordinates
  PublicKey o-- ECPoint : yCoordinate
  publicParameters -up-|> Serializable
  publicParameters o-- EllipticCurve : curve
  publicParameters o-- ECPoint : basePoint
  publicParameters o-- ECPoint : kgcPublic
  publicParameters o-- PublicKey : bankPublicKey


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
